libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__fn_empty.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "[]"
---
[31m[jexpr::parser::array::expected-callee] Error:[0m J-Expr Frontend
   ╭─[ <unknown>:1:1 ]
   │
 1 │ []
   │ ─┬  
   │  ╰── Expected callee
   │ 
   │ Help: The callee is always the first argument in the array
───╯
