libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__fn_empty_args.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "[\"func\"]"
---
Expr {
    kind: Call(
        Call {
            fn: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Symbol {
                                value: "func",
                                span: SpanId(
                                    1,
                                ),
                            },
                        ],
                        span: SpanId(
                            2,
                        ),
                    },
                ),
                span: SpanId(
                    0,
                ),
            },
            args: [],
        },
    ),
    span: SpanId(
        3,
    ),
}
