libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__object_is_constant_with_extra_fields.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "{\"type\": \"u32\", \"const\": 42, \"sig\": \"() -> Unit\"}"
---
[31m[jexpr::parse::object::unknown-key] Error:[0m Unknown Key
   ╭─[<unknown>:1:30]
   │
 1 │ {"type": "u32", "const": 42, "sig": "() -> Unit"}
   │                              ──┬──  
   │                                ╰──── Unknown key `sig`
   │ 
   │ Help: Expected const, or type
───╯
