libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__object_is_empty.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "{}"
---
[31m[jexpr::parser::object::expected-non-empty] Error:[0m J-Expr Frontend
   ╭─[ <unknown>:1:1 ]
   │
 1 │ {}
   │ ─┬  
   │  ╰── Expected a non-empty object
───╯
