libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__object_is_invalid.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "{\"unknown\": \"key\"}"
---
[31m[jexpr::parser::object::unknown-key] Error:[0m J-Expr Frontend
   ╭─[<unknown>:1:2]
   │
 1 │ {"unknown": "key"}
   │  ────┬────  
   │      ╰────── Unknown key `unknown`
   │ 
   │ Help: Expected const, or type
───╯
